# UczPraktyka_6

./: .gitignore  CMakeLists.txt  README.md  main.cpp
